ubah alamat & CNAME

--- a/index.html
+++ b/index.html
@@ -680,13 +680,13 @@
 																	<div class="elementor-element elementor-element-73a32d6 elementor-widget elementor-widget-heading" data-id="73a32d6" data-element_type="widget" data-widget_type="heading.default">
 																		<div class="elementor-widget-container">
 																			<h2 class="elementor-heading-title elementor-size-default"><b>Kediaman Mempelai Pria</b><br />
-																				Jl. K S Tubun, RT.02/RW.01, Cibuluh, Kec. Bogor Utara, Kota Bogor, Jawa Barat 16151</h2>
+																				Kp. Pasir Maung, RT 02 RW 05, Desa Cijayanti, Kecamatan Babakan Madang, Kabupaten bogor</h2>
 																		</div>
 																	</div>
 																	<div class="elementor-element elementor-element-9c817a2 elementor-widget__width-auto jedv-enabled--yes elementor-widget elementor-widget-button" data-id="9c817a2" data-element_type="widget" data-widget_type="button.default">
 																		<div class="elementor-widget-container">
 																			<div class="elementor-button-wrapper">
-																				<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://maps.app.goo.gl/wuUAxQh5QMUJx7MW7?g_st=com.google.maps.preview.copy" target="_blank" rel="nofollow">
+																				<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-shrink" href="https://maps.app.goo.gl/26J22hyARmrVDs2R7" target="_blank" rel="nofollow">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">GOOGLE MAPS</span>
 		</span>
