--- a/index.html
+++ b/index.html
@@ -840,15 +840,15 @@
 																				<div class="elementor-widget-wrap elementor-element-populated">
 																					<div class="elementor-element elementor-element-787914d elementor-widget elementor-widget-heading" data-id="787914d" data-element_type="widget" data-widget_type="heading.default">
 																						<div class="elementor-widget-container">
-																							<h2 class="elementor-heading-title elementor-size-default">BCA</h2>		</div>
+																							<h2 class="elementor-heading-title elementor-size-default">SINARMAS</h2>		</div>
 																					</div>
 																					<div class="elementor-element elementor-element-74d180c elementor-widget elementor-widget-heading" data-id="74d180c" data-element_type="widget" data-widget_type="heading.default">
 																						<div class="elementor-widget-container">
-																							<h2 class="elementor-heading-title elementor-size-default">681-524-1901</h2>		</div>
+																							<h2 class="elementor-heading-title elementor-size-default">0045586294</h2>		</div>
 																					</div>
 																					<div class="elementor-element elementor-element-9838112 elementor-widget elementor-widget-heading" data-id="9838112" data-element_type="widget" data-widget_type="heading.default">
 																						<div class="elementor-widget-container">
-																							<h2 class="elementor-heading-title elementor-size-default">a.n Della Letari</h2>		</div>
+																							<h2 class="elementor-heading-title elementor-size-default">a.n M. Zaenal Fajar</h2>		</div>
 																					</div>
 																					<div class="elementor-element elementor-element-7dc8d72 elementor-align-center elementor-widget elementor-widget-dce-copy-to-clipboard" data-id="7dc8d72" data-element_type="widget" data-widget_type="dce-copy-to-clipboard.default">
 																						<div class="elementor-widget-container">
@@ -862,7 +862,7 @@
 			</span>
 																									</button>
 																								</div>
-																								<input class="elementor-size-sm dce-clipboard-value elementor-field-textual dce-offscreen dce-form-control" id="dce-clipboard-value-7dc8d72-7534" aria-hidden="true" type="text" value="681-524-1901">
+																								<input class="elementor-size-sm dce-clipboard-value elementor-field-textual dce-offscreen dce-form-control" id="dce-clipboard-value-7dc8d72-7534" aria-hidden="true" type="text" value="0045586294">
 																							</div>
 
 																							<script>
@@ -876,59 +876,6 @@
 																										return false;
 																									});
 																									clipboard_7dc8d72_7534.on('error', function (e) {
-																										console.log(e);
-																									});
-																								});
-																							</script>
-																						</div>
-																					</div>
-																				</div>
-																			</div>
-																		</div>
-																	</section>
-																	<section data-dce-background-color="#FFFFFF" data-dce-background-overlay-color="#FFFFFF" class="elementor-section elementor-inner-section elementor-element elementor-element-9e8466f animated-slow jedv-enabled--yes elementor-section-boxed elementor-section-height-default elementor-section-height-default elementor-invisible" data-id="9e8466f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeIn&quot;,&quot;jet_parallax_layout_list&quot;:[],&quot;_ha_eqh_enable&quot;:false}">
-																		<div class="elementor-background-overlay"></div>
-																		<div class="elementor-container elementor-column-gap-default">
-																			<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-4a473b5" data-id="4a473b5" data-element_type="column">
-																				<div class="elementor-widget-wrap elementor-element-populated">
-																					<div class="elementor-element elementor-element-fa794c5 elementor-widget elementor-widget-heading" data-id="fa794c5" data-element_type="widget" data-widget_type="heading.default">
-																						<div class="elementor-widget-container">
-																							<h2 class="elementor-heading-title elementor-size-default">Shopepay/Ovo/Gopay</h2>		</div>
-																					</div>
-																					<div class="elementor-element elementor-element-793a4d9 elementor-widget elementor-widget-heading" data-id="793a4d9" data-element_type="widget" data-widget_type="heading.default">
-																						<div class="elementor-widget-container">
-																							<h2 class="elementor-heading-title elementor-size-default">083873611030</h2>		</div>
-																					</div>
-																					<div class="elementor-element elementor-element-eb48ccd elementor-widget elementor-widget-heading" data-id="eb48ccd" data-element_type="widget" data-widget_type="heading.default">
-																						<div class="elementor-widget-container">
-																							<h2 class="elementor-heading-title elementor-size-default">a.n Della Lestari</h2>		</div>
-																					</div>
-																					<div class="elementor-element elementor-element-44ad6fa elementor-align-center elementor-widget elementor-widget-dce-copy-to-clipboard" data-id="44ad6fa" data-element_type="widget" data-widget_type="dce-copy-to-clipboard.default">
-																						<div class="elementor-widget-container">
-																							<div class="dce-clipboard-wrapper dce-clipboard-wrapper-text">
-																								<div >
-																									<button class="elementor-button elementor-size-sm elementor-animation-shrink" type="button" id="dce-clipboard-btn-44ad6fa-7534" data-clipboard-target="#dce-clipboard-value-44ad6fa-7534">
-			<span class="elementor-button-content-wrapper dce-flexbox">
-									<span class="elementor-button-icon elementor-align-icon-left">
-						<i aria-hidden="true" class="far fa-clone"></i>					</span>
-								<span class="elementor-button-text">Salin No. Rek</span>
-			</span>
-																									</button>
-																								</div>
-																								<input class="elementor-size-sm dce-clipboard-value elementor-field-textual dce-offscreen dce-form-control" id="dce-clipboard-value-44ad6fa-7534" aria-hidden="true" type="text" value="083873611030">
-																							</div>
-
-																							<script>
-																								jQuery(function () {
-																									var clipboard_44ad6fa_7534 = new ClipboardJS('#dce-clipboard-btn-44ad6fa-7534');
-																									clipboard_44ad6fa_7534.on('success', function (e) {
-																										jQuery('#dce-clipboard-btn-44ad6fa-7534').addClass('animated').addClass('tada');
-																										setTimeout(function(){
-																											jQuery('#dce-clipboard-btn-44ad6fa-7534').removeClass('animated').removeClass('tada');
-																										}, 3000);
-																										return false;
-																									});
-																									clipboard_44ad6fa_7534.on('error', function (e) {
 																										console.log(e);
 																									});
 																								});
